--- a/index.html
+++ b/index.html
@@ -2,3 +2,5 @@ This is the Admin creating an index.html file for Tom and Jerry.
 
 This is Tom adding Navigation to the AI-website
 
+This is Jerry adding Navigation to the AI-website
+
